# Word-MCP

./: .gitignore  LIVE_AGENT_GUIDE.md  LIVE_TOOLS_AGENT_GUIDE.md  LIVE_V2_AGENT_GUIDE.md  README.md  TOOLS.md  WORD_MCP_LIVE_SKILL.md  fix_close5.py  old_block.txt  pyproject.toml  requirements.txt  test_formatting.py
scripts/: install-word-mcp.ps1
tests/: test_document_tools.py  test_live_api_helpers.py  test_live_tool_helpers.py  test_live_v2_helpers.py  test_main_async_wrappers.py  test_tool_parameter_names.py  test_tool_signatures.py  test_v2_signatures.py  test_word_com_helpers.py
word_document_server/: __init__.py  defaults.py  main.py
word_document_server/core/: __init__.py  word_com.py  word_mac.py
word_document_server/tools/: __init__.py  document_tools.py  format_tools.py  live_api_tools.py  live_read_tools.py  live_tools.py  live_v2_tools.py
word_document_server/utils/: __init__.py  file_utils.py  path_utils.py  text_safety.py
